added group list endpoint + fixes
